<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Date">Date</string>
    <string name="Hours">Hrs.</string>
    <string name="Hrs">Hrs</string>
    <string name="Km">Km</string>
    <string name="Min">Min</string>
    <string name="Mins">Min</string>
    <string name="MyTaskDisplay">MyTask</string>
    <string name="Project_list">Project</string>
    <string name="Registertime">Register Time</string>
    <string name="about_app_more_text">More on this please visit our site:</string>
    <string name="about_app_text">Onjyb is a user-friendly and simple app for time tracking and leave and vacation for the employees . This app was developed in collaboration with appbusinesspartner as, construction companies , rental of excavator , scaffolding companies and plumbers etc. in Eastern Norway.</string>
    <string name="absent_vacation">Absent and Vacation</string>
    <string name="action_settings">Settings</string>
    <string name="activity_heading">Latest Activities</string>
    <string name="alert_cancel_lv">Do you want to cancel your leave?</string>
    <string name="alert_reject_lv">Do you want to Reject leave?</string>
    <string name="alert_update_lv">update lv?</string>
    <string name="all">All</string>
    <string name="app_name">Onjyb</string>
    <string name="apply">Send Request</string>
    <string name="approved">Approved</string>
    <string name="approved_hrs">Approved Hours</string>
    <string name="approved_leave">Approved Leave</string>
    <string name="are_you_sure_approve_leave">Are you sure want to approve leave?</string>
    <string name="are_you_sure_want_logout">Are you sure to logout ?</string>
    <string name="btn_LV_pendding">Pendding</string>
    <string name="btn_Lv_history">History</string>
    <string name="btn_add">Save</string>
    <string name="btn_calcel">Cancel</string>
    <string name="btn_chng_psw">Change Password</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_new_task">New Task</string>
    <string name="btn_past_task">Past Task</string>
    <string name="btn_remove_photo">Remove Photo</string>
    <string name="btn_search">Apply</string>
    <string name="btn_title_approve">Approve</string>
    <string name="btn_title_not_approve">Reject</string>
    <string name="btn_title_pending">Pendding</string>
    <string name="btn_txt_accept">Approve</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string name="btn_txt_reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="cancel1">Canceled</string>
    <string name="cancel_hrs">Canceled Hours</string>
    <string name="cancel_leave">Canceled Leave</string>
    <string name="choose_photo">Select Image</string>
    <string name="comments">Comments</string>
    <string name="comments1">Employee Note:</string>
    <string name="conform_cancle_leave">Are Sure Want to cancel leave?</string>
    <string name="crop_image">Crop Image</string>
    <string name="display_branch">Branch:</string>
    <string name="display_break_time">Break Time:</string>
    <string name="display_date">Approval date:</string>
    <string name="display_over_time">Over Time:</string>
    <string name="display_project">Project:</string>
    <string name="display_services">Service:</string>
    <string name="display_services_service">Extra Work:</string>
    <string name="display_work_hrs">Working Hours:</string>
    <string name="display_work_hrs1">Working Time:</string>
    <string name="emailid">Email:</string>
    <string name="employee_note">Employee Note</string>
    <string name="end_date">End Date</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_conform_password">Please enter confirm password</string>
    <string name="enter_leave_from">Please select from date</string>
    <string name="enter_leave_till">Please select till date</string>
    <string name="enter_leavetype">Please select leave type</string>
    <string name="enter_mobile_no">Please enter mobile number</string>
    <string name="enter_new_password">Please enter new passowrd</string>
    <string name="enter_old_password">Please enter old password</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="enter_profile_name">Please enter name</string>
    <string name="enter_username">Please Enter Email Address</string>
    <string name="enter_valid_email">Please enter valid email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="from_camera">From Camera</string>
    <string name="from_library">From Library</string>
    <string name="greater_than_working_time">The time you are registering is more then 8Hrs, Are you sure you want to register?</string>
    <string name="greater_than_working_timepart1">The time you are registering is more then</string>
    <string name="greater_than_working_timepart2">Hrs, Are you sure you want to register?</string>
    <string name="header_login_screen">Login</string>
    <string name="hint_comment_for_registrer">Add your comments here</string>
    <string name="hint_select_branch">Select Branch</string>
    <string name="hint_select_service">Select Service</string>
    <string name="hint_type_msg">Message type here...</string>
    <string name="home">Home</string>
    <string name="impropper_data">Working hours are less then overtime, please correct total hours spent from clock to clock</string>
    <string name="invalid_date_selection">Selected leave date are wrong, please correct it and try again.</string>
    <string name="km">Km</string>
    <string name="projectname">Project</string>
    <string name="select_branch">Branch</string>
    <string name="select_employee">Employee</string>
    <string name="select_employee_hint">Select Employee</string>
    <string name="select_leaveType">Leave Type</string>
    <string name="select_project">Project</string>
    <string name="select_services">Service</string>
    <string name="select_status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="text_username">Enter Name</string>
    <string name="tv_Km">Km.</string>
    <string name="tv_address">Address:</string>
    <string name="tv_email">E-mail:</string>
    <string name="tv_hours">Hours</string>
    <string name="tv_mobile">Mobile:</string>
    <string name="txt_address">Enter Address</string>
    <string name="txt_mobile">Enter Mobile</string>
    <string name="txt_new_psw">Enter New Password</string>
    <string name="txt_no_data">No data</string>
    <string name="txt_old_psw">Enter Old Password</string>
    <string name="txt_re_enter_psw">Re-enter New password</string>
    <string name="txt_select_project">Select Project</string>
    <string name="txt_updateDetail">Update Details</string>
    <string name="about_app_url">www.onjyb.com</string>
    <string name="about_app_url_support">Support@onjyb.com</string>
    <string name="hash_txt">#</string>
</resources>