<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/login_bg_hdpi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView android:id="@+id/imgvlogo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/onjyb_logo"
        android:layout_centerHorizontal="true" />
    <com.onjyb.customview.ETechTextView android:gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_app_text" android:layout_below="@+id/imgvlogo1" style="@style/tv_comman_gray" />
    <LinearLayout android:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" android:orientation="vertical" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <com.onjyb.customview.ETechTextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_app_more_text" style="@style/tv_comman_green" />
        <com.onjyb.customview.ETechTextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_app_url" android:onClick="RedierecttoUrl" style="@style/tv_comman" />
        <com.onjyb.customview.ETechTextView android:id="@+id/tvsupportmail" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/about_app_url_support" android:onClick="RedierecttoUrlsupport" style="@style/tv_comman" />
    </LinearLayout>
</RelativeLayout>
